test/corpus/dataform.txt
==================
Config Block
==================
config {
  type: "view"
}
---
(source_file
  (config_block
    (config_content
      (open_brace)
      (close_brace))))

==================
Config Block with Array
==================
config {
  tags: ["daily", "important"]
}
---
(source_file
  (config_block
    (config_content
      (open_brace)
      (close_brace))))

==================
Config Block with Nested Object
==================
config {
  type: "table",
  bigquery: {
    partitionBy: "date",
    clusterBy: ["region", "country"]
  }
}
---
(source_file
  (config_block
    (config_content
      (open_brace)
      (close_brace))))

==================
JS Block
==================
js {
  const x = "hello";
}
---
(source_file
  (js_block
    (open_brace)
    (js_content)
    (close_brace)))

==================
SQL Statement
==================
SELECT * FROM table
---
(source_file
  (statement
    (identifier))
  (statement
    (symbol))
  (statement
    (identifier))
  (statement
    (identifier)))

==================
Interpolation
==================
SELECT ${ref("table")}
---
(source_file
  (statement
    (identifier))
  (statement
    (interpolation
      (string))))

==================
Complex Interpolation
==================
SELECT ${function({a: "b"})}
---
(source_file
  (statement
    (identifier))
  (statement
    (interpolation
      (braced_code
        (string)))))

==================
Pre-operations Block
==================
pre_operations {
  DECLARE x DEFAULT 1
}
---
(source_file
  (pre_operations_block
    (open_brace)
    (statement
      (identifier))
    (statement
      (identifier))
    (statement
      (identifier))
    (statement
      (number))
    (close_brace)))

==================
Post-operations Block
==================
post_operations {
  GRANT SELECT ON TABLE t TO "user@example.com"
}
---
(source_file
  (post_operations_block
    (open_brace)
    (statement
      (identifier))
    (statement
      (identifier))
    (statement
      (identifier))
    (statement
      (identifier))
    (statement
      (identifier))
    (statement
      (identifier))
    (statement
      (string))
    (close_brace)))
